recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if (step==0){}
  else{
 baisseCrayon()
  avance(length)
  droite(angle)
    tree(steps-1,shrink*length,angle,shrink)
  
  }
}